--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="DeCorImg.png" alt="" id="logoDeCor">
         <div id="palmatdiv">
             <button onclick="btnpalavra()" id="btnpal" class="btn">Palavras</button>
-            <button class="btn">Matemática</button>
+            <button class="btn btnGray">Matemática</button>
         </div>
         <img src="logoMWDt.png" alt="" id="logoMWD">
     </section>
@@ -29,22 +29,14 @@
     <section id="secdigitar">
         
         <div id="gradepalavras">
-            <div class="divpalavras"></div>
-            <div class="divpalavras"></div>
-            <div class="divpalavras"></div>
-            <div class="divpalavras"></div>
-            <div class="divpalavras"></div>
-            <div class="divpalavras"></div>
-            <div class="divpalavras"></div>
-            <div class="divpalavras"></div>
-            <div class="divpalavras"></div>
+            <div class="divpalavras"></div><div class="divpalavras"></div><div class="divpalavras"></div><div class="divpalavras"></div><div class="divpalavras"></div><div class="divpalavras"></div><div class="divpalavras"></div><div class="divpalavras"></div><div class="divpalavras"></d>
         </div>
         
         <div id="iniform">
-            <fieldset>
-                <legend>Digite aqui e dê enter</legend>
+            <fieldset class="ifieldset">
+                <legend>Mín 2 palavras, 2 letras. Máx 20 letras.</legend>
                     <input type="text" name="palavraInput" id="ipalavraInput" class="inputs"
-                    placeholder="Mín 2 palavras, 2 letras. Máx 20 letras" autocomplete="off" maxlength="20" minlength="2"
+                    placeholder="Digite aqui e dê enter" autocomplete="off" maxlength="20" minlength="2"
                     onfocus="focoEsc()">
             </fieldset>
             <button onclick="enviando()" class="btn btnGray" id="btnenviar">Enviar</button>
@@ -60,15 +52,16 @@
                 <p>=</p>
                 <div id="escrito"></div>
             </div>
+            <button class="btn btnGray" id="dica" onclick="dandoDica()">Dica</button>
         </div>
         <div id="decform">
             <button onclick="sorteando()" id="btnsorte" class="btn">Sortear</button>
-            <fieldset style="margin: 0;">
-                <legend>Digite aqui e dê enter</legend>
-                <input type="text" name="decoraInput" id="idecoraInput" class="inputs btnGray" placeholder="Digite aqui" autocomplete="off"
+            <button onclick="verificando()" id="btnverifica" class="btn btnGray">Verificar</button>
+            <fieldset style="margin: 0;" class="ifieldset">
+                <legend>Escreva em minúsculas.</legend>
+                <input type="text" name="decoraInput" id="idecoraInput" class="inputs btnGray" placeholder="Digite aqui e dê enter" autocomplete="off"
                 maxlength="20" minlength="2" onfocus="focoSec()">
             </fieldset>
-                <button onclick="verificando()" id="btnverifica" class="btn btnGray">Verificar</button>
         </div>
         <img src="logoMWDt.png" alt="" id="logoMWD">
     </section>
