--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>DeCor</title>
 </head>
 
-<body onload="carregando()">
+<body onload="carregando()" id="corpo">
     <div id="fundoAlerta"></div>
     <div id="alerta">
         <p id="palerta">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore facilis magnam aliquid velit, omnis veniam maiores nisi distinctio impedit amet officia nam atque fugit cupiditate explicabo officiis quos dolor sapiente! lore
