--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="android-chrome-192x192.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" media="all">
     <link rel="stylesheet" href="stylecel.css" media="screen and (orientation:portrait)">
     <title>DeCor</title>
@@ -33,7 +33,7 @@
             <button onclick="btnpalavra()" id="btnpal" class="btn">Palavras</button>
             <button class="btn btnGray">Matemática</button>
         </div>
-        <img src="logoMWDt.png" alt="" id="logoMWD">
+        <a href="https://mwd-oficial.github.io/sobre" target="_blank"><img src="logoMWDt.png" alt="" id="logoMWD"></a>
     </section>
     <i class="material-icons" id="setavoltar" class="btn" onclick="voltar()">west</i>
     <section id="secdigitar">
@@ -51,7 +51,7 @@
             </fieldset>
             <button onclick="enviando()" class="btn btnGray" id="btnenviar">Enviar</button>
         </div>
-        <img src="logoMWDt.png" alt="" id="logoMWD">
+        <a href="https://mwd-oficial.github.io/sobre" target="_blank"><img src="logoMWDt.png" alt="" id="logoMWD"></a>
     </section>
 
     <section id="secdecorar">
@@ -73,7 +73,7 @@
                 maxlength="20" minlength="2" onfocus="focoSec()">
             </fieldset>
         </div>
-        <img src="logoMWDt.png" alt="" id="logoMWD">
+        <a href="https://mwd-oficial.github.io/sobre" target="_blank"><img src="logoMWDt.png" alt="" id="logoMWD"></a>
     </section>
     <script src="script.js"></script>
 </body>
